[gd_scene load_steps=7 format=3 uid="uid://crqvtyebp211a"]

[ext_resource type="Script" path="res://Board/Scripts/Score_Counter.gd" id="1_62cgk"]
[ext_resource type="Texture2D" uid="uid://cph7cxyuj85tw" path="res://Board/Textures/Profile_Pics/Empty_Profile_Pic.png" id="1_kr50u"]
[ext_resource type="Texture2D" uid="uid://bbpiymebldd7a" path="res://Board/Textures/Profile_Pics/Border_Green_Profile_Pic.png" id="2_nlc1q"]
[ext_resource type="Texture2D" uid="uid://6n4gdg2evttu" path="res://Board/Textures/Profile_Pics/Border_Red_Profile_Pic.png" id="3_1tasx"]
[ext_resource type="FontFile" uid="uid://bru4ckd1tof86" path="res://Fonts/Kanit-Bold.ttf" id="4_oks2w"]
[ext_resource type="FontFile" uid="uid://f6tgej42lrqe" path="res://Fonts/ProtestGuerrilla-Regular.ttf" id="5_tsq5h"]

[node name="Score_Counter" type="Node2D"]
script = ExtResource("1_62cgk")

[node name="Profile_Pic" type="Sprite2D" parent="."]
scale = Vector2(1.5, 1.5)
texture = ExtResource("1_kr50u")

[node name="Border_Green" type="Sprite2D" parent="."]
visible = false
scale = Vector2(1.5, 1.5)
texture = ExtResource("2_nlc1q")

[node name="Border_Red" type="Sprite2D" parent="."]
visible = false
scale = Vector2(1.5, 1.5)
texture = ExtResource("3_1tasx")

[node name="Label_Name" type="Label" parent="."]
offset_left = -95.0
offset_top = -166.0
offset_right = 95.0
offset_bottom = -96.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 11
theme_override_constants/shadow_outline_size = 15
theme_override_fonts/font = ExtResource("4_oks2w")
theme_override_font_sizes/font_size = 45
text = "Name"
horizontal_alignment = 1
vertical_alignment = 2
clip_text = true

[node name="Label_Score" type="Label" parent="."]
offset_left = 105.0
offset_top = -45.0
offset_right = 165.0
offset_bottom = 40.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 12
theme_override_constants/shadow_outline_size = 18
theme_override_fonts/font = ExtResource("5_tsq5h")
theme_override_font_sizes/font_size = 70
text = "0"
horizontal_alignment = 1
vertical_alignment = 1
